tests/errors/bad-statement-in-main.ja
procedure main()
    int x

    error asdfasdg
